@@ -7,6 +7,8 @@
 # # ## ### ##### ######## ############# #####################
 ## Requirements
 
+package require Tcl 8.5
+
 if {[catch {package require tcltest 2}]} {
     puts stderr "Skipping tests in [info script].  tcltest 2 required."
     return
@@ -29,7 +31,7 @@ test hwloc-bitmap-1.0 {wrong\#args, missing method} -body {
 test hwloc-bitmap-1.1 {bad method name} -body {
     hwloc bitmap xxx
 } -returnCodes error \
-    -result {bad option "xxx": must be empty, full, only, allbut, from_ulong, to_ulong, set, set_range, clear, clear_range, singlify, is_set, is_zero, is_full, first, next, last, weight, or, and, andnot, xor, not, intersects, is_included, is_equal, compare, or compare_first}
+    -result {bad option "xxx": must be empty, full, only, allbut, from_ulong, to_ulong, set, set_range, clear, clear_range, singlify, is_set, is_empty, is_full, first, next, last, weight, or, and, andnot, xor, not, intersects, is_included, is_equal, compare, or compare_first}
 
 # # ## ### ##### ######## ############# #####################
 ## 0-ary operators, constant bitmaps
@@ -44,6 +46,8 @@ foreach {n op} {
 	-result "wrong # args: should be \"hwloc bitmap $op\""
 }
 
+# - -- --- ----- -------- ------------- ---------------------
+
 test hwloc-bitmap-2.2 {constant bitmaps, empty} -body {
     hwloc bitmap empty
 } -result {}
@@ -54,13 +58,12 @@ test hwloc-bitmap-2.3 {constant bitmaps, full} -body {
 
 # # ## ### ##### ######## ############# #####################
 ## unary operators
-# is_zero BITMAP --- BETTER NAME: is_empty
 
 foreach {n op p} {
     0 from_ulong mask
     1 first      bitmap
     2 is_full    bitmap
-    3 is_zero    bitmap
+    3 is_empty   bitmap
     4 last       bitmap
     5 not        bitmap
     6 singlify   bitmap
@@ -76,6 +79,207 @@ foreach {n op p} {
 	hwloc bitmap $op X Y
     } -returnCodes error \
 	-result "wrong # args: should be \"hwloc bitmap $op $p\""
+
+    if {$n} {
+	test hwloc-bitmap-3.$n.2 "unary bitmap operations, $op, bad bitmap" -body {
+	    hwloc bitmap $op X
+	} -returnCodes error \
+	    -result {failed to parse cpuset}
+    } else {
+	test hwloc-bitmap-3.$n.2 "unary bitmap operations, $op, bad integer" -body {
+	    hwloc bitmap $op X
+	} -returnCodes error \
+	    -result {expected integer but got "X"}
+    }
+}
+
+# - -- --- ----- -------- ------------- ---------------------
+# from_ulong, to_ulong (complementary operations)
+
+foreach {n v r} {
+    3   0 {}
+    4   1 0
+    5   2 1
+    6   3 0-1
+    7   5 0,2
+    8   7 0-2
+    9  11 0-1,3
+    10 13 0,2-3
+    11 17 0,4
+    12 19 0-1,4
+} {
+    test hwloc-bitmap-3.0.$n "unary bitmap operations, from_ulong $v" -body {
+	hwloc bitmap from_ulong $v
+    } -result $r
+
+    test hwloc-bitmap-3.7.$n "unary bitmap operations, to_ulong $r" -body {
+	hwloc bitmap to_ulong $r
+    } -result $v
+}
+
+# - -- --- ----- -------- ------------- ---------------------
+# first (bit of the set, errors on empty set).
+# singlify - alias of first, in essence, except it doesn't error on
+# the empty set.
+
+test hwloc-bitmap-3.1.3 "unary bitmap operations, first (empty)" -body {
+    hwloc bitmap first {}
+} -returnCodes error -result {hwloc_bitmap_first error}
+
+test hwloc-bitmap-3.6.3 "unary bitmap operations, singlify (empty)" -body {
+    hwloc bitmap singlify {}
+} -result {}
+
+foreach {n v r} {
+    4  0     0
+    5  1     1
+    6  0-1   0
+    7  0,2   0
+    8  0-2   0
+    9  0-1,3 0
+    10 0,2-3 0
+    11 0,4   0
+    12 0-1,4 0
+    13 0-    0
+    14 4-    4
+} {
+    test hwloc-bitmap-3.1.$n "unary bitmap operations, first \"$v\"" -body {
+	hwloc bitmap first $v
+    } -result $r
+
+    test hwloc-bitmap-3.6.$n "unary bitmap operations, singlify \"$v\"" -body {
+	hwloc bitmap singlify $v
+    } -result $r
+}
+
+# - -- --- ----- -------- ------------- ---------------------
+# is_full
+
+foreach {n v r} {
+    3  {}    0
+    4  0     0
+    5  1     0
+    6  0-1   0
+    7  0,2   0
+    8  0-2   0
+    9  0-1,3 0
+    10 0,2-3 0
+    11 0,4   0
+    12 0-1,4 0
+    13 0-    1
+    14 4-    0
+} {
+    test hwloc-bitmap-3.2.$n "unary bitmap operations, is_full \"$v\"" -body {
+	hwloc bitmap is_full $v
+    } -result $r
+}
+
+# - -- --- ----- -------- ------------- ---------------------
+# is_empty
+
+foreach {n v r} {
+    3  {}    1
+    4  0     0
+    5  1     0
+    6  0-1   0
+    7  0,2   0
+    8  0-2   0
+    9  0-1,3 0
+    10 0,2-3 0
+    11 0,4   0
+    12 0-1,4 0
+    13 0-    0
+    14 4-    0
+} {
+    test hwloc-bitmap-3.2.$n "unary bitmap operations, is_empty \"$v\"" -body {
+	hwloc bitmap is_empty $v
+    } -result $r
+}
+
+# - -- --- ----- -------- ------------- ---------------------
+# last (last bit set, errors on empty and infinite sets)
+
+test hwloc-bitmap-3.4.3 "unary bitmap operations, last (empty)" -body {
+    hwloc bitmap last {}
+} -returnCodes error -result {hwloc_bitmap_last error}
+
+test hwloc-bitmap-3.1.13 "unary bitmap operations, last (infinite set)" -body {
+    hwloc bitmap last 0-
+} -returnCodes error -result {hwloc_bitmap_last error}
+
+test hwloc-bitmap-3.1.14 "unary bitmap operations, last (infinite set)" -body {
+    hwloc bitmap last 4-
+} -returnCodes error -result {hwloc_bitmap_last error}
+
+foreach {n v r} {
+    4  0     0
+    5  1     1
+    6  0-1   1
+    7  0,2   2
+    8  0-2   2
+    9  0-1,3 3
+    10 0,2-3 3
+    11 0,4   4
+    12 0-1,4 4
+} {
+    test hwloc-bitmap-3.4.$n "unary bitmap operations, last \"$v\"" -body {
+	hwloc bitmap last $v
+    } -result $r
+}
+
+# - -- --- ----- -------- ------------- ---------------------
+# not (bit inversion, result of finite sets is infinite, and vice versa)
+
+foreach {n v r} {
+    3  {}    0-
+    4  0     1-
+    5  1     0,2-
+    6  0-1   2-
+    7  0,2   1,3-
+    8  0-2   3-
+    9  0-1,3 2,4-
+    10 0,2-3 1,4-
+    11 0,4   1-3,5-
+    12 0-1,4 2-3,5-
+    13 0-    {}
+    14 4-    0-3
+} {
+    test hwloc-bitmap-3.5.$n.0 "unary bitmap operations, not \"$v\"" -body {
+	hwloc bitmap not $v
+    } -result $r
+
+    # complementary
+    test hwloc-bitmap-3.5.$n.1 "unary bitmap operations, not \"$r\"" -body {
+	hwloc bitmap not $r
+    } -result $v
+}
+
+# - -- --- ----- -------- ------------- ---------------------
+# weight (number of bits in set, errors on infinite sets)
+
+test hwloc-bitmap-3.8.13 "unary bitmap operations, weight (infinite set)" -body {
+    hwloc bitmap weight 0-
+} -returnCodes error -result {hwloc_bitmap_weight error}
+
+test hwloc-bitmap-3.8.14 "unary bitmap operations, weight (infinite set)" -body {
+    hwloc bitmap weight 4-
+} -returnCodes error -result {hwloc_bitmap_weight error}
+
+foreach {n v r} {
+    3  {}    0
+    4  0     1
+    5  1     1
+    6  0-1   2
+    7  0,2   2
+    8  0-2   3
+    9  0-1,3 3
+    10 0,2-3 3
+    11 0,4   2
+    12 0-1,4 3
+} {
+    test hwloc-bitmap-3.8.$n "unary bitmap operations, weight \"$v\"" -body {
+	hwloc bitmap weight $v
+    } -result $r
 }
 
 # # ## ### ##### ######## ############# #####################
@@ -112,6 +316,24 @@ foreach {n op p} {
 	hwloc bitmap $op X Y Z
     } -returnCodes error \
 	-result "wrong # args: should be \"hwloc bitmap $op $p\""
+
+    test hwloc-bitmap-4.$n.3 "binary bitmap operations, $op, bad bitmap" -body {
+	hwloc bitmap $op X Y
+    } -returnCodes error \
+	-result {failed to parse cpuset}
+
+    if {$n > 5} {
+	test hwloc-bitmap-4.$n.4 "biary bitmap operations, $op, bad bitmap" -body {
+	    hwloc bitmap $op 0- Y
+	} -returnCodes error \
+	    -result {failed to parse cpuset}
+
+    } else {
+	test hwloc-bitmap-4.$n.4 "binary bitmap operations, $op, bad integer" -body {
+	    hwloc bitmap $op 0- Y
+	} -returnCodes error \
+	    -result {expected integer but got "Y"}
+    }
 }
 
 # # ## ### ##### ######## ############# #####################
@@ -143,39 +365,53 @@ foreach {n op} {
 	hwloc bitmap $op X Y Z W
     } -returnCodes error \
 	-result "wrong # args: should be \"hwloc bitmap $op bitmap begin end\""
+
+    test hwloc-bitmap-5.$n.4 "trinary bitmap operations, $op, bad bitmap" -body {
+	hwloc bitmap $op X Y Z
+    } -returnCodes error \
+	-result {failed to parse cpuset}
+
+    test hwloc-bitmap-5.$n.5 "trinary bitmap operations, $op, bad start index" -body {
+	hwloc bitmap $op 0- Y Z
+    } -returnCodes error \
+	-result {expected integer but got "Y"}
+
+    test hwloc-bitmap-5.$n.6 "trinary bitmap operations, $op, bad end index" -body {
+	hwloc bitmap $op 0- 5 Z
+    } -returnCodes error \
+	-result {expected integer but got "Z"}
 }
 
-puts =====================================
+puts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+
 set full  [hwloc bitmap full]
 set empty [hwloc bitmap empty]
 
-puts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 puts "only: [hwloc bitmap only $full 1]"
 puts "allbut: [hwloc bitmap allbut $full 1]"
-puts "from_ulong: [hwloc bitmap from_ulong 2]"
+
 puts "set: [hwloc bitmap set $empty 1]"
 puts "set_range: [hwloc bitmap set_range $empty 0 1]"
 puts "clear: [hwloc bitmap clear $full 1]"
 puts "clear_range: [hwloc bitmap clear_range $full 0 1]"
-puts "singlify: [hwloc bitmap singlify $full]"
+
 puts "is_set: [hwloc bitmap is_set $full 0]"
-puts "is_zero: [hwloc bitmap is_zero $empty]"
-puts "is_full: [hwloc bitmap is_full $empty]"
+
 puts "or: [hwloc bitmap or $empty $full]"
 puts "and: [hwloc bitmap and $empty $full]"
 puts "andnot: [hwloc bitmap andnot $empty $full]"
 puts "xor: [hwloc bitmap xor $empty $full]"
-puts "not: [hwloc bitmap not $empty]"
+
 puts "intersects: [hwloc bitmap intersects $full 1]"
 puts "is_included: [hwloc bitmap is_included $full 1]"
 puts "is_included: [hwloc bitmap is_included 1 $full]"
 puts "is_equal: [hwloc bitmap is_equal $full 1]"
 puts "compare: [hwloc bitmap compare $full 1]"
 puts "compare_first: [hwloc bitmap compare_first $full 1]"
-puts "first: [hwloc bitmap first $full]"
-puts "next: [hwloc bitmap next $full 1]"
-puts "last: [hwloc bitmap last 0,1]"
-puts "weight: [hwloc bitmap weight 0,1]"
-puts "weight: [hwloc bitmap weight $empty]"
-puts "weight: [hwloc bitmap weight $full]" ;# error, infinite set, bad weight.
 
+puts "next: [hwloc bitmap next $full 1]"
+
+puts @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
+
+# # ## ### ##### ######## ############# #####################
+tcltest::cleanupTests
